# pose_estimators

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  setup.py
.github/: pull_request_template.md
scripts/: run_sim_perception_module.py
src/deep_pose_estimators/: __init__.py  ada_food_manipulation.py  data_collection.py  detected_item.py  detection_w_projection.py  encoder.py  evaluation.py  herb_sodahandoff.py  loss.py  main.py  marker_manager.py  multibox.py  pascal_voc.py  perception_frontend.py  perception_module.py  rcnn_moped.py  rcnn_projection.py  run_data_collection.sh  run_detection.sh  run_perception_module.py  run_test.sh  run_train.sh  setup.py  test.py  tester.py  train.py  transforms.py
src/deep_pose_estimators/apps/: rcnn_projection.py
src/deep_pose_estimators/config/: ada.json  herb.json  rs_d415.json  tf_herb.json  tf_rs_d415.json
src/deep_pose_estimators/datasets/: convert_tf_dataset.sh  food_ann.txt  food_ann_test.txt  food_ann_train.txt  food_label_map.pbtxt  food_label_map.pkl
src/deep_pose_estimators/models/: ssd.py  vgg.py
src/deep_pose_estimators/pose_estimators/: README.md  pose_estimator.py  sim_pose_estimator.py
src/deep_pose_estimators/robot_conf/: ada.py  herb.py
src/deep_pose_estimators/utils/: __init__.py  camera_subscriber.py  encoder.py  math_utils.py  (+3 more)
src/pose_estimators/: __init__.py  detected_item.py  marker_manager.py  perception_module.py  retinanet_detector.py  run_perception_module.py  sim_pose_estimator.py
src/rcnn_pose/: .rcnn_projection.py.swp  rcnn_coco.py  rcnn_moped.py  rcnn_projection.py
(+8 files in other folders)
