<?xml version="1.0"?>
<package format="2">
  <name>pose_estimators</name>
  <version>0.1.0</version>
  <description>The pose estimation libararies for PRL robots</description>
  <license>UNRELEASED</license>

  <maintainer email="gilwoo@uw.edu">Gilwoo Lee</maintainer>
  <author email="yskim041@gmail.com">Youngsun Kim</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>python</depend>

  <exec_depend>numpy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <!-- HERB only -->
  <!--<exec_depend>pcl</exec_depend>-->

</package>
